--- a/jameblog/_sass/realjame/_base.scss
+++ b/jameblog/_sass/realjame/_base.scss
@@ -35,7 +35,7 @@ body {
 	-o-font-feature-settings: "kern" 1;
 	font-feature-settings: "kern" 1;
 	font-kerning: normal;
-	width: 60%;
+	width: 50%;
 	margin: auto;
 	min-height: 100vh;
 	@media (max-width: 768px) {
@@ -67,6 +67,7 @@ figure,
  * `main` element
  */
 main {
+	padding: 1em;
 	display: block; /* Default value of `display` of `main` element is 'inline' in IE 11. */
 }
 
@@ -113,7 +114,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-weight: $base-font-weight;
+	// font-weight: $base-font-weight;
 }
 
 /**
