Update Jekyll theme to 0.1.5: fixes blog nav link

--- a/realjame-jekyll-theme/_includes/header.html
+++ b/realjame-jekyll-theme/_includes/header.html
@@ -25,7 +25,7 @@
 		>
 		{%- endif -%} {%- endfor -%}
 		<a class="page-link" href="https://realja.me">Home</a>
-		<a class="page-link" href="https://realja.me/blog">Blog</a>
+		<a class="page-link" href="https://realja.me/blog/">Blog</a>
 		<a class="page-link" href="https://realja.me/contact.html">About</a>
 		<!-- </div> -->
 	</nav>
