--- a/jameblog/_sass/realjame.scss
+++ b/jameblog/_sass/realjame.scss
@@ -15,9 +15,9 @@ $text-color: #eee !default;
 $background-color: #222 !default;
 $brand-color: lightblue !default;
 
-$grey-color: lightblue !default;
-$grey-color-light: lighten($grey-color, 40%) !default;
-$grey-color-dark: darken($grey-color, 25%) !default;
+$grey-color: gray !default;
+$grey-color-light: silver !default;
+$grey-color-dark: dimgray !default;
 
 $table-text-align: left !default;
 
