--- a/jameblog/_includes/header.html
+++ b/jameblog/_includes/header.html
@@ -2,7 +2,7 @@
 	{%- assign default_paths = site.pages | map: "path" -%} {%- assign page_paths
 	= site.header_pages | default: default_paths -%}
 	<!-- <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a> -->
-	<h1 class="site-title">{{ site.title | escape }}</h1>
+	<h2 class="site-title">{{ site.title | escape }}</h1>
 
 	{%- if page_paths -%}
 	<nav class="site-nav">
@@ -18,12 +18,12 @@
 		</label>
 
 		<!-- <div class="trigger"> -->
-		{%- for path in page_paths -%} {%- assign my_page = site.pages | where:
+		<!-- {%- for path in page_paths -%} {%- assign my_page = site.pages | where:
 		"path", path | first -%} {%- if my_page.title -%}
 		<a class="page-link" href="{{ my_page.url | relative_url }}"
 			>{{ my_page.title | escape }}</a
 		>
-		{%- endif -%} {%- endfor -%}
+		{%- endif -%} {%- endfor -%} -->
 		<a class="page-link" href="https://realja.me">Home</a>
 		<a class="page-link" href="https://realja.me/blog/">Blog</a>
 		<a class="page-link" href="https://realja.me/contact.html">About</a>
