--- a/jameblog/_layouts/home.html
+++ b/jameblog/_layouts/home.html
@@ -14,7 +14,10 @@ title: "Posts"
       <a class="category-button" href="">{{ category | first }}</a>
     {% endfor %}
   </div> -->
-  <p>List all posts by: <a href="categories">category</a> / <a href="list">date</a></p>
+  <p>
+		List all posts by: <a href="categories.html">category</a> /
+		<a href="list.html">date</a>
+	</p>
 
   {%- if site.posts.size > 0 -%}
     <!-- <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2> -->
