Quick fix to themes to make code background fit with dark theme

--- a/jameblog/_sass/realjame.scss
+++ b/jameblog/_sass/realjame.scss
@@ -12,12 +12,15 @@ $base-line-height: 1.5 !default;
 $spacing-unit: 30px !default;
 
 $text-color: #eee !default;
+$text-color-light: #333 !default;
+
 $background-color: #222 !default;
+$background-color-light: #eee !default;
+
 $brand-color: lightblue !default;
 
-$grey-color: gray !default;
-$grey-color-light: silver !default;
-$grey-color-dark: dimgray !default;
+$grey-color: #444 !default;
+$grey-color-light: gray !default;
 
 $table-text-align: left !default;
 
