--- a/jameblog/_sass/realjame/_layout.scss
+++ b/jameblog/_sass/realjame/_layout.scss
@@ -52,7 +52,7 @@
 		top: 9px;
 		right: $spacing-unit / 2;
 		background-color: $background-color;
-		border: 1px solid $grey-color-light;
+		border: 1px solid $grey-color;
 		border-radius: 5px;
 		text-align: right;
 
@@ -75,7 +75,7 @@
 			text-align: center;
 
 			> svg {
-				fill: $grey-color-dark;
+				fill: $grey-color;
 			}
 		}
 
@@ -165,7 +165,7 @@
 
 .post-meta {
 	font-size: $small-font-size;
-	color: $grey-color-light;
+	color: $grey-color;
 	text-align: center;
 }
 
