Make dates easier to read by reducing color contrast

--- a/jameblog/_sass/realjame.scss
+++ b/jameblog/_sass/realjame.scss
@@ -19,7 +19,7 @@ $background-color-light: #eee !default;
 
 $brand-color: lightblue !default;
 
-$grey-color: #444 !default;
+$grey-color: #bbb !default;
 $grey-color-light: gray !default;
 
 $table-text-align: left !default;
