--- a/jameblog/_sass/realjame/_base.scss
+++ b/jameblog/_sass/realjame/_base.scss
@@ -247,7 +247,11 @@ table {
 	}
 	tr {
 		&:nth-child(even) {
-			background-color: lighten($gray-color, 6%);
+			background-color: lighten($background-color, 6%);
+
+			@include light-mode() {
+				background-color: lighten($background-color-light, 6%);
+			}
 		}
 	}
 	th,
@@ -255,9 +259,12 @@ table {
 		padding: ($spacing-unit / 3) ($spacing-unit / 2);
 	}
 	th {
-		background-color: lighten($gray-color, 3%);
-		border: 1px solid darken($gray-color, 4%);
-		border-bottom-color: darken($gray-color, 12%);
+		background-color: $background-color;
+		border: 1px solid $gray-color;
+
+		@include light-mode() {
+			background-color: darken($background-color-light, 1%);
+		}
 	}
 	td {
 		border: 1px solid $gray-color;
