Make code formatting look less ugly colored

--- a/jameblog/_sass/realjame.scss
+++ b/jameblog/_sass/realjame.scss
@@ -24,10 +24,13 @@ $content-background-color: #333 !default;
 $content-background-color-light: #ddd !default;
 
 $nav-button-background-color: #444 !default;
-$nav-button-background-color-light: #bbb !default;
+$nav-button-background-color-light: #ccc !default;
 
 $brand-color: lightblue !default;
 $brand-color-light: #30829c !default;
+
+$code-background-color: #444 !default;
+$code-background-color-light: #ccc !default;
 
 $gray-color: #888 !default;
 
