--- a/jameblog/_sass/realjame/_syntax-highlighting.scss
+++ b/jameblog/_sass/realjame/_syntax-highlighting.scss
@@ -2,11 +2,18 @@
  * Syntax highlighting styles
  */
 .highlight {
-	background: $gray-color;
+	background: $code-background-color;
 	@extend %vertical-rhythm;
 
+	@include light-mode() {
+		background-color: $code-background-color-light;
+	}
+
 	.highlighter-rouge & {
-		background: $gray-color;
+		background: $code-background-color;
+		@include light-mode() {
+			background-color: $code-background-color-light;
+		}
 	}
 
 	.c {
