--- a/jameblog/_sass/realjame/_base.scss
+++ b/jameblog/_sass/realjame/_base.scss
@@ -166,7 +166,11 @@ code {
 	@include relative-font-size(0.9375);
 	border: 1px solid $gray-color;
 	border-radius: 3px;
-	background-color: $gray-color;
+	background-color: $code-background-color;
+
+	@include light-mode() {
+		background-color: $code-background-color-light;
+	}
 }
 
 code {
