Add some new blog posts wip

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -4,4 +4,9 @@
 
     {%- include social.html -%}
 
+    <a rel="me" href="https://wetdry.world/@jame">
+      <img class="svg-icon" src="{{ '/assets/mastodon.svg' | relative_url }}" alt="Mastodon">
+      <span class="username">@jame@wetdry.world</span>
+    </a>
+
 </footer>
