--- a/src/_sass/realjame/_base.scss
+++ b/src/_sass/realjame/_base.scss
@@ -63,8 +63,9 @@ main {
  * Images
  */
 img {
-	max-width: 100%;
-	vertical-align: middle;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /**
