--- a/src/_layouts/bloghome.html
+++ b/src/_layouts/bloghome.html
@@ -4,18 +4,14 @@ title: "Posts"
 ---
 
 <div class="home">
-  <h2 class="page-heading">Blog</h1>
 
   {{ content }}
 
-  <p>
-    List all posts by:
-    <a href="categories.html">category</a>
-    /
-    <a href="list.html">date</a>
-  </p>
+
+  {%- include tagcloud.html -%}
 
   {%- if site.posts.size > 0 -%}
+    <h2>Posts</h2>
     <p class="rss-subscribe">subscribe
       <a href="{{ "/feed.xml" | relative_url }}">via RSS</a>
     </p>
