--- a/src/_sass/realjame/_base.scss
+++ b/src/_sass/realjame/_base.scss
@@ -6,6 +6,7 @@ body {
 		$base-font-family;
 	color: $text-color;
 	background-color: $background-color;
+	background-image: url(/assets/misc/setup.jpg);
 	-webkit-text-size-adjust: 100%;
 	-webkit-font-feature-settings: "kern" 1;
 	-moz-font-feature-settings: "kern" 1;
@@ -46,7 +47,8 @@ figure,
 }
 
 h1,
-h2 {
+h2,
+h3 {
 	margin: 0;
 	text-align: center;
 }
@@ -66,7 +68,8 @@ img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 100%;
+	// width: 100%;
+	max-width: 100%;
 }
 
 /**
@@ -93,7 +96,7 @@ figcaption {
  */
 ul,
 ol {
-	margin-left: $spacing-unit;
+	// margin-left: $spacing-unit;
 }
 
 li {
@@ -120,7 +123,7 @@ h6 {
  */
 a {
 	color: $brand-color;
-	text-decoration: none;
+	// text-decoration: none;
 
 	@include light-mode() {
 		color: $brand-color-light;
@@ -281,4 +284,11 @@ table {
 	td {
 		border: 1px solid $gray-color;
 	}
+}
+
+/**
+ * Text effects
+ */
+.text-focus {
+	text-align: center;
 }
