revamps are almost done. just adding images to the blog post and finishing touches (testing docker image)

--- a/src/_includes/buttonrow.html
+++ b/src/_includes/buttonrow.html
@@ -1,5 +1,7 @@
 <ul class="button-row">
-  <a href="https://nick64.me"><img src="https://nick64.me/images/button.gif" alt="nick64.me"></a>
-  <a href="http://razorback95.com"><img src="https://razorback95.com/rz95_button.gif" alt="Razorback"></a>
-  <a href="https://landchad.net"><img src="/assets/misc/landchad.gif" alt="Get a website - LandChad.net"></a>
+  <a href="https://nick64.me"><img src="/assets/buttons/nick64.gif" alt="nick64.me"></a>
+  <a href="http://razorback95.com"><img src="/assets/buttons/razorback95.gif" alt="Razorback"></a>
+  <a href="https://landchad.net"><img src="/assets/buttons/landchad.gif" alt="Get a website - LandChad.net"></a>
+  <a href="https://yesterweb.org/no-to-web3/"><img src="/assets/buttons/saynotoweb3.gif" alt="Say no to Web3 - Keep the web free"></a>
+  <a href="https://realja.me"><img src="/realjame.gif" alt="realja.me"></a>
 </ul>
