--- a/src/_sass/realjame.scss
+++ b/src/_sass/realjame.scss
@@ -1,28 +1,39 @@
 @charset "utf-8";
+
 @font-face {
-	font-family: "Open Sans";
+	font-family: 'PT Sans';
+	src:
+		url('/assets/fonts/PT-Sans/pt-sans_regular.woff2') format('woff2'),
+		url('/assets/fonts/PT-Sans/pt-sans_regular.woff') format('woff');
 	font-weight: normal;
-	src: url(/assets/fonts/OpenSans/OpenSans-Regular.ttf) format("truetype");
+	font-style: normal;
 }
+
 @font-face {
-	font-family: "PT Sans";
+	font-family: 'PT Sans Bold';
+	src:
+		url('/assets/fonts/PT-Sans/pt-sans_bold.woff2') format('woff2'),
+		url('/assets/fonts/PT-Sans/pt-sans_bold.woff') format('woff');
 	font-weight: normal;
-	src: url(/assets/fonts/PT_Sans/PTSans-Regular.ttf) format("truetype");
+	font-style: normal;
 }
+
 @font-face {
-	font-family: "PT Sans Bold";
-	font-weight: bold;
-	src: url(/assets/fonts/PT_Sans/PTSans-Bold.ttf) format("truetype");
+	font-family: 'PT Sans Italic';
+	src:
+		url('/assets/fonts/PT-Sans/pt-sans_italic.woff2') format('woff2'),
+		url('/assets/fonts/PT-Sans/pt-sans_italic.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
 }
+
 @font-face {
-	font-family: "PT Sans Italic";
-	font-weight: bold;
-	src: url(/assets/fonts/PT_Sans/PTSans-Italic.ttf) format("truetype");
-}
-@font-face {
-	font-family: "PT Sans Bold Italic";
-	font-weight: bold;
-	src: url(/assets/fonts/PT_Sans/PTSans-BoldItalic.ttf) format("truetype");
+	font-family: 'PT Sans Bold Italic';
+	src:
+		url('/assets/fonts/PT-Sans/pt-sans_bold-italic.woff2') format('woff2'),
+		url('/assets/fonts/PT-Sans/pt-sans_bold-italic.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
 }
 
 // Define defaults for each variable.
