--- a/src/_sass/realjame/_base.scss
+++ b/src/_sass/realjame/_base.scss
@@ -19,7 +19,6 @@
 	@include light-mode() {
 		color-scheme: light;
 	}
-
 }
 
 body {
@@ -34,9 +33,13 @@ body {
 	-o-font-feature-settings: "kern" 1;
 	font-feature-settings: "kern" 1;
 	font-kerning: normal;
-	width: 50%;
+	width: 60%;
 	margin: auto;
 	min-height: 100vh;
+
+	@include media-query($medium-screen) {
+		width: 75%;
+	}
 
 	@include media-query($small-screen) {
 		width: 90%;
@@ -106,7 +109,7 @@ video {
 /**
  * Figures
  */
-figure>img {
+figure > img {
 	display: block;
 }
 
@@ -123,9 +126,8 @@ ol {
 }
 
 li {
-
-	>ul,
-	>ol {
+	> ul,
+	> ol {
 		margin-bottom: 0;
 	}
 }
@@ -177,8 +179,10 @@ a {
 blockquote {
 	color: $gray-color;
 	border-left: 4px solid $gray-color;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
 	padding-left: $spacing-unit / 2;
-	@include relative-font-size(1.125);
+	@include relative-font-size(1.1);
 	letter-spacing: -1px;
 	font-style: italic;
 
@@ -210,7 +214,7 @@ pre {
 	padding: 8px 12px;
 	overflow-x: auto;
 
-	>code {
+	> code {
 		border: 0;
 		padding-right: 0;
 		padding-left: 0;
@@ -219,6 +223,7 @@ pre {
 
 // Textbox
 textarea {
+	border-radius: 4px;
 	background-color: $code-background-color;
 
 	@include light-mode() {
@@ -275,7 +280,7 @@ textarea {
 }
 
 .social-media-list {
-	li+li {
+	li + li {
 		padding-top: 5px;
 	}
 }
@@ -287,20 +292,21 @@ table {
 	margin-bottom: $spacing-unit;
 	width: 100%;
 	text-align: $table-text-align;
-	color: lighten($text-color, 18%);
+	// color: lighten($text-color, 18%);
 	border-collapse: collapse;
 	border: 1px solid $gray-color;
+	border-radius: 4px;
 
 	@include light-mode() {
-		color: lighten($text-color-light, 18%);
+		// color: lighten($text-color-light, 18%);
 	}
 
 	tr {
 		&:nth-child(even) {
-			background-color: lighten($background-color, 6%);
+			background-color: $nav-button-background-color;
 
 			@include light-mode() {
-				background-color: lighten($background-color-light, 6%);
+				background-color: $nav-button-background-color-light;
 			}
 		}
 	}
@@ -311,16 +317,18 @@ table {
 	}
 
 	th {
-		background-color: $background-color;
+		background-color: $nav-background-color;
 		border: 1px solid $gray-color;
+		border-radius: 4px;
 
 		@include light-mode() {
-			background-color: darken($background-color-light, 1%);
+			background-color: $nav-background-color-light;
 		}
 	}
 
 	td {
 		border: 1px solid $gray-color;
+		border-radius: 4px;
 	}
 }
 
