--- a/src/_sass/realjame/_layout.scss
+++ b/src/_sass/realjame/_layout.scss
@@ -11,11 +11,9 @@
 
 .page-title {
 	border-radius: 10px 10px 0 0;
-    outline: solid white 1px;
-	background-color: #272727;
-}
+	border: solid $border-color $border-size;
+	background-color: $title-background-color;
 
-.page-title {
 	// @include relative-font-size(1.8);
 	color: $text-color;
 	// font-weight: bold;
@@ -28,7 +26,10 @@
 	// line-height: normal; // override to match realja.me
 
 	@include light-mode() {
+		background-color: $title-background-color-light;
 		color: $text-color-light;
+
+		border: solid $border-color-light $border-size-light;
 	}
 }
 
@@ -38,10 +39,12 @@
 	align-items: center;
 	justify-content: center;
 
-	border: solid white 1px;
+	border: solid $border-color $border-size;
 
 	@include light-mode() {
 		background-color: $nav-background-color-light;
+
+		border: solid $border-color-light $border-size-light;
 	}
 
 	.page-link {
@@ -58,6 +61,11 @@
 			margin: 0 0.25em;
 			padding: 0.2em;
 		}
+
+		@include media-query($medium-screen) {
+			margin: 0 0.5em;
+			padding: 0.35em;
+		}
 	}
 
 	@include media-query($small-screen) {
@@ -65,6 +73,12 @@
 			padding: 5px 10px;
 		}
 	}
+
+	// @include media-query($medium-screen) {
+	// 	.page-link {
+	// 		padding: 5px 10px;
+	// 	}
+	// }
 }
 
 /**
@@ -90,11 +104,13 @@
 	justify-content: center;
 
 	border-style: none solid solid;
-	border-color: white;
-	border-width: 1px;
+	border-color: $border-color;
+	border-width: $border-size;
 
 	@include light-mode() {
 		background-color: $content-background-color-light;
+		border-color: $border-color-light;
+		border-width: $border-size-light;
 	}
 
 	@media (max-width: 768px) {
@@ -133,11 +149,13 @@
 	padding: 1em;
 
 	border-style: none solid;
-	border-color: white;
-	border-width: 1px;
+	border-color: $border-color;
+	border-width: $border-size;
 
 	@include light-mode() {
 		background-color: $content-background-color-light;
+		border-color: $border-color-light;
+		border-width: $border-size-light;
 	}
 }
 
@@ -240,7 +258,6 @@
 		}
 	}
 
-	
 	h4 {
 		@include relative-font-size(1.25);
 
