--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,12 +1,29 @@
 <footer class="site-footer h-card">
   <data class="u-url" href="{{ " /" | relative_url }}"></data>
-    <a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a>
 
-    {%- include social.html -%}
+  <ul class="footer-bar">
 
-    <a rel="me" href="https://wetdry.world/@jame">
-      <img class="svg-icon" src="{{ '/assets/mastodon.svg' | relative_url }}" alt="Mastodon">
-      <span class="username">@jame@wetdry.world</span>
-    </a>
+    <li>
+      <a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a>
+    </li>
 
+    <li>
+      <a href="https://github.com/real__jame }}">
+        <svg class="svg-icon">
+          <use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use>
+        </svg>
+        <span class="username">real__jame</span>
+      </a>
+    </li>
+
+    <li>
+      <a rel="me" href="https://wetdry.world/@jame">
+        <img
+          class="svg-icon"
+          src="{{ '/assets/mastodon.svg' | relative_url }}"
+          alt="Mastodon">
+        <span class="username">@jame@wetdry.world</span>
+      </a>
+    </li>
+  </ul>
 </footer>
