--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,24 +1,27 @@
 <header class="site-header" role="banner">
   {%- assign default_paths = site.pages | map: "path" -%} {%- assign page_paths
  = site.header_pages | default: default_paths -%}
-  <!-- <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | "" }}</a> -->
   <h1 class="page-title">{{ page.title | site.title | "" }}</h1>
 
   {%- if page_paths -%}
     <nav class="site-nav">
 
-      <!-- <div class="trigger"> -->
-      <!-- {%- for path in page_paths -%} {%- assign my_page = site.pages | where:
-      "path", path | first -%} {%- if my_page.title -%}
-      <a class="page-link" href="{{ my_page.url | relative_url }}"
-      >{{ my_page.title | "" }}</a
-      >
-      {%- endif -%} {%- endfor -%} -->
-        <a class="page-link" href="/"> Home</a>
-      <a class="page-link" href="/tags/news">News</a>
-      <a class="page-link" href="/blog">Blog</a>
-      <a class="page-link" href="/contact">Contact</a>
-      <!-- </div> -->
+      <ul class="footer-bar header-bar">
+        <li>
+          <a class="page-link" href="/">
+            Home</a>
+        </li>
+        <li>
+          <a class="page-link" href="/tags/news">News</a>
+        </li>
+        <li>
+          <a class="page-link" href="/blog">Blog</a>
+        </li>
+        <li>
+          <a class="page-link" href="/contact">Contact</a>
+        </li>
+      </ul>
+
     </nav>
   {%- endif -%}
 </header>
