--- a/src/_layouts/tag.html
+++ b/src/_layouts/tag.html
@@ -2,7 +2,7 @@
   layout: default
 ---
 
-<ul>
+<ul class="post-list">
   {%- for post in site.posts -%}
     {% if post.tags contains page.title %}
       <li>
