--- a/src/_sass/realjame/_base.scss
+++ b/src/_sass/realjame/_base.scss
@@ -95,14 +95,14 @@ img {
 	margin-left: auto;
 	margin-right: auto;
 	// width: 100%;
-	max-width: 100%;
+	max-width: 60%;
 }
 
 /**
  * Videos
  */
 video {
-	max-width: 100%;
+	max-width: 60%;
 	vertical-align: middle;
 }
 
@@ -123,6 +123,8 @@ figcaption {
 ul,
 ol {
 	// margin-left: $spacing-unit;
+	// margin: 0;
+	padding-left: 1.25em;
 }
 
 li {
@@ -188,6 +190,10 @@ blockquote {
 
 	> :last-child {
 		margin-bottom: 0;
+	}
+
+	@include media-query($small-screen) {
+		margin: 0;
 	}
 }
 
@@ -268,9 +274,9 @@ textarea {
 	width: 16px;
 	height: 16px;
 	display: inline-block;
-	fill: #{$gray-color};
-	padding-right: 5px;
-	vertical-align: text-top;
+	// fill: #{$gray-color};
+	// padding-right: 5px;
+	// vertical-align: text-top;
 }
 
 .icon {
