Add wiby.me and sizeof.cat to button footer

--- a/src/_includes/buttonrow.html
+++ b/src/_includes/buttonrow.html
@@ -3,5 +3,7 @@
   <a href="http://razorback95.com"><img src="/assets/buttons/razorback95.gif" alt="Razorback"></a>
   <a href="https://landchad.net"><img src="/assets/buttons/landchad.gif" alt="Get a website - LandChad.net"></a>
   <a href="https://yesterweb.org/no-to-web3/"><img src="/assets/buttons/saynotoweb3.gif" alt="Say no to Web3 - Keep the web free"></a>
+  <a href="https://sizeof.cat"><img src="/assets/buttons/sizeofcat.jpg" alt="sizeof(cat)"></a>
+  <a href="https://wiby.me"><img src="/assets/buttons/wiby.gif" alt="wiby.me - Search"></a>
   <a href="https://realja.me"><img src="/realjame.gif" alt="realja.me"></a>
 </ul>
