Add NeoCities button

--- a/src/_includes/buttonrow.html
+++ b/src/_includes/buttonrow.html
@@ -5,5 +5,6 @@
   <a href="https://yesterweb.org/no-to-web3/"><img src="/assets/buttons/saynotoweb3.gif" alt="Say no to Web3 - Keep the web free"></a>
   <a href="https://sizeof.cat"><img src="/assets/buttons/sizeofcat.jpg" alt="sizeof(cat)"></a>
   <a href="https://wiby.me"><img src="/assets/buttons/wiby.gif" alt="wiby.me - Search"></a>
+  <a href="https://neocities.org"><img src="/assets/buttons/neocities.gif" alt="NeoCities.org - The web is yours"></a>
   <a href="https://realja.me"><img src="/realjame.gif" alt="realja.me"></a>
 </ul>
