Replace GitHub footer link with Twitter

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -8,11 +8,11 @@
     </li>
 
     <li>
-      <a href="https://github.com/real__jame }}">
+      <a href="https://twitter.com/real__jame">
         <svg class="svg-icon">
-          <use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use>
+          <use xlink:href="{{ '/assets/minima-social-icons.svg#twitter' | relative_url }}"></use>
         </svg>
-        <span class="username">real__jame</span>
+        <span class="username">@real__jame</span>
       </a>
     </li>
 
