--- a/src/_layouts/bloghome.html
+++ b/src/_layouts/bloghome.html
@@ -21,7 +21,7 @@ title: "Posts"
           {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
           <span class="post-meta">{{ post.date | date: date_format }}</span>
           <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | "" }}
+            {{ post.title | default: "-Untitled-" }}
           </a>
           {%- if post.description -%}
             {{ post.description }}
