--- a/src/_layouts/tag.html
+++ b/src/_layouts/tag.html
@@ -9,7 +9,7 @@
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         <span class="post-meta">{{ post.date | date: date_format }}</span>
         <a class="post-link" href="{{ post.url | relative_url }}">
-          {{ post.title | "" }}
+          <p>{{ post.title | default: "-Untitled-" }}</p>
         </a>
         {%- if post.description -%}
           {{ post.description }}
