--- a/src/_layouts/bloghome.html
+++ b/src/_layouts/bloghome.html
@@ -17,6 +17,7 @@ title: "Posts"
     </p>
     <ul class="post-list">
       {%- for post in site.posts -%}
+
         <li>
           {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
           <span class="post-meta">{{ post.date | date: date_format }}</span>
@@ -27,6 +28,7 @@ title: "Posts"
             {{ post.description }}
           {%- endif -%}
         </li>
+        endif
       {%- endfor -%}
     </ul>
 
