--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -18,6 +18,9 @@
           <a class="page-link" href="/blog">Blog</a>
         </li>
         <li>
+          <a class="page-link" href="/tags/news">Devlogs</a>
+        </li>
+        <li>
           <a class="page-link" href="/contact">Contact</a>
         </li>
       </ul>
