--- a/src/_sass/realjame/_base.scss
+++ b/src/_sass/realjame/_base.scss
@@ -68,7 +68,7 @@ ol,
 dl,
 figure,
 %vertical-rhythm {
-	margin-bottom: $spacing-unit / 2;
+	margin-bottom: calc($spacing-unit / 2);
 }
 
 h1,
@@ -183,7 +183,7 @@ blockquote {
 	border-left: 4px solid $gray-color;
 	border-top-left-radius: 4px;
 	border-bottom-left-radius: 4px;
-	padding-left: $spacing-unit / 2;
+	padding-left: calc($spacing-unit / 2);
 	@include relative-font-size(1.1);
 	letter-spacing: -1px;
 	font-style: italic;
@@ -252,8 +252,8 @@ textarea {
 	@include media-query($small-screen) {
 		max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
 		max-width: calc(#{$content-width} - (#{$spacing-unit}));
-		padding-right: $spacing-unit / 2;
-		padding-left: $spacing-unit / 2;
+		padding-right: calc($spacing-unit / 2);
+		padding-left: calc($spacing-unit / 2);
 	}
 }
 
@@ -319,7 +319,7 @@ table {
 
 	th,
 	td {
-		padding: ($spacing-unit / 3) ($spacing-unit / 2);
+		padding: calc($spacing-unit / 3) calc($spacing-unit / 2);
 	}
 
 	th {
